--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="nav_item_background">#E5E7EB</color>
     <color name="star_color">#FFCA28</color>
 
+    <color name="purple_700">#7B1FA2</color>
 </resources>
