Add AdminPaymentsFragment and menu item
Introduced AdminPaymentsFragment with corresponding layout and icon. Updated AdminActivity and menu_admin_drawer.xml to support navigation to the new payments report section.

--- a/app/src/main/res/menu/menu_admin_drawer.xml
+++ b/app/src/main/res/menu/menu_admin_drawer.xml
@@ -42,6 +42,12 @@
         android:title="Báo cáo tour" />
 
     <item
+        android:id="@+id/nav_admin_payments"
+        android:icon="@drawable/ic_money"
+        android:title="Báo cáo Thanh toán" />
+
+
+    <item
         android:id="@+id/nav_admin_invitation"
         android:icon="@drawable/ic_invation"
         android:title="Lời mời" />
