--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,16 @@
         <item name="android:textColor">@color/chip_text_selector</item>
     </style>
 
+    <style name="ProfileOptionButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@android:color/white</item>
+        <item name="android:textColor">#333</item>
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">start|center_vertical</item>
+    </style>
+
+
 </resources>
