--- a/app/src/main/res/menu/menu_admin_drawer.xml
+++ b/app/src/main/res/menu/menu_admin_drawer.xml
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/nav_admin_bookings"
         android:icon="@drawable/ic_travel"
-        android:title="Đặt chỗ" />
+        android:title="Đặt chỗ booking" />
 
     <item
         android:id="@+id/nav_admin_promotions"
